log

10 Mar 2022 20:05:43: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
eb23614
10 Mar 2022 20:06:30: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d02e951
10 Mar 2022 20:22:13: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:20: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   42 |    *(suma) = sumaN(*(a + tamano), n);
      |                    ^~~~~~~~~~~~~
      |                    |
      |                    int
exercises.c:21:15: note: expected 'int *' but argument is of type 'int'
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1032a24
10 Mar 2022 21:01:10: 
 exercises.c | 28 +++++++++++++++++++++++-----
 1 file changed, 23 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:20: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   42 |    *(suma) = sumaN(*(a + tamano), n);
      |                    ^~~~~~~~~~~~~
      |                    |
      |                    int
exercises.c:21:15: note: expected 'int *' but argument is of type 'int'
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c: In function 'crearPersona':
exercises.c:66:11: error: function returns address of local variable [-Werror=return-local-addr]
   66 |    return &humano;
      |           ^~~~~~~
exercises.c: In function 'crearVector':
exercises.c:86:16: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   86 |    array.datos = (Vector *) calloc (n, sizeof(Vector));
      |                ^
exercises.c:89:11: error: function returns address of local variable [-Werror=return-local-addr]
   89 |    return &array;
      |           ^~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c355e7c
10 Mar 2022 21:08:25: 
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:20: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   42 |    *(suma) = sumaN(*(a + tamano), n);
      |                    ^~~~~~~~~~~~~
      |                    |
      |                    int
exercises.c:21:15: note: expected 'int *' but argument is of type 'int'
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c: In function 'crearPersona':
exercises.c:66:11: error: function returns address of local variable [-Werror=return-local-addr]
   66 |    return &humano;
      |           ^~~~~~~
exercises.c: In function 'crearVector':
exercises.c:86:16: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   86 |    array.datos = (Vector *) calloc (n, sizeof(Vector));
      |                ^
exercises.c:89:11: error: function returns address of local variable [-Werror=return-local-addr]
   89 |    return &array;
      |           ^~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
917f131
10 Mar 2022 21:08:44: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:21: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   42 |    *(suma) = sumaN(a[tamano], n);
      |                    ~^~~~~~~~
      |                     |
      |                     int
exercises.c:21:15: note: expected 'int *' but argument is of type 'int'
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c: In function 'crearVector':
exercises.c:86:16: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   86 |    array.datos = (Vector *) calloc (n, sizeof(Vector));
      |                ^
exercises.c:84:11: error: variable 'array' set but not used [-Werror=unused-but-set-variable]
   84 |    Vector array;
      |           ^~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
11f1fbe
10 Mar 2022 21:11:05: 
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:21: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
   42 |    *(suma) = sumaN(a[tamano], n);
      |                    ~^~~~~~~~
      |                     |
      |                     int
exercises.c:21:15: note: expected 'int *' but argument is of type 'int'
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
exercises.c: In function 'crearVector':
exercises.c:86:16: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   86 |    array.datos = (Vector *) calloc (n, sizeof(Vector));
      |                ^
exercises.c:84:11: error: variable 'array' set but not used [-Werror=unused-but-set-variable]
   84 |    Vector array;
      |           ^~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b37a022
10 Mar 2022 21:11:23: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crearVector':
exercises.c:88:11: error: function returns address of local variable [-Werror=return-local-addr]
   88 |    return &array;
      |           ^~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cf90b39
10 Mar 2022 21:12:59: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'crearVector':
exercises.c:88:16: error: returning 'int *' from a function with incompatible return type 'Vector *' [-Werror=incompatible-pointer-types]
   88 |    return array.datos;
      |           ~~~~~^~~~~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2b41d7d
